--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                            <!-- /.card-heading -->
                            <div class="card-info">
                                <div class="card-rating">
-                                   <img src="..img/rating.svg" alt="Rating"> 4.5
+                                   <img src="img/rating.svg" alt="Rating"> 4.5
                                </div>
                                <div class="card-price">от 900 ₽</div>
                                <div class="card-category">Пицца</div>
